# signsight

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml
docs/: RESULTS.md
docs/assets/: training-log.txt
models/: signsight-cnn.pt
sample_data/: README.md
serve/: Dockerfile  main.py  requirements.txt
serve/static/: index.html
signsight/: __init__.py  classes.py  data.py  evaluate.py  gradcam.py  infer.py  model.py  train.py
tests/: test_api.py  test_gradcam.py  test_model.py
